Set real name to use on IRC server

--- a/home/.config/weechat/irc.conf
+++ b/home/.config/weechat/irc.conf
@@ -117,7 +117,7 @@ nicks = "smerik,smerik1,smerik2,smerik3,smerik4"
 notify = ""
 password = ""
 proxy = ""
-realname = ""
+realname = "Erik van der Kolk"
 sasl_mechanism = plain
 sasl_password = ""
 sasl_timeout = 15
