Set nicknames to use on IRC server

--- a/home/.config/weechat/irc.conf
+++ b/home/.config/weechat/irc.conf
@@ -113,7 +113,7 @@ default_msg_part = "WeeChat %v"
 default_msg_quit = "WeeChat %v"
 ipv6 = on
 local_hostname = ""
-nicks = "smerik,smerik1,smerik2,smerik3,smerik4"
+nicks = "smerik,KolK-E,smerik81,erik1981"
 notify = ""
 password = ""
 proxy = ""
